Email Verification on AWS Server

--- a/src/main/webapp/email-verification.html
+++ b/src/main/webapp/email-verification.html
@@ -16,7 +16,7 @@ $(document).ready(function () {
     
     function verifyToken(tokenValue)
     {
-        $.get('http://localhost:8080/mobile-app-ws/users/email-verification', {token: tokenValue})
+        $.get('http://{awshost}:8080/mobile-app-ws/users/email-verification', {token: tokenValue})
         .done(function (response) {
         	
             if (response["operationResult"] === "SUCCESS")
